Forenkling i JettyServer oppsett og lokal utvikling. (#1905)
* Forenkling i JettyServer oppsett og lokal utvikling.
* Noen små forbedringer i GHA workflows
* Snyk scan daglig.